<resources>
    <string name="app_name">DAMEP_JuanSerna</string>
    <string name="textapellidonombre">Tu respuesta</string>
    <string name="textcorreoelectronico">Tu respuesta</string>
    <string name="textpassword">Tu respuesta</string>
    <string name="texttelefono">Tu respuesta</string>
    <string name="textfechanacimiento">22/03/2023</string>
    <string name="buttonurbano">Urbano</string>
    <string name="buttonrural">Rural</string>
    <string name="textvivienda">Tu respuesta</string>
    <string name="textnombreapellido">Tu respuesta</string>
    <string name="texthora" />
    <string name="checkgato">Gato</string>
    <string name="checkperro">Perro</string>
    <string name="checkPollo">Pollo</string>
    <string name="checkPato">Pato</string>
    <string name="checkOtro">Otro</string>
    <string name="buttonenviar">Enviar</string>
</resources>